--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cached_network_image: ^3.2.0
   image_picker: ^0.7.2+1
   flutter_otp_text_field: ^1.1.1
+  lottie: ^3.1.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
